# python-timew

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  LICENSE  Makefile  README.md  README.rst  compile-requirements  dev-requirements.in  dev-requirements.txt  pyproject.toml  release.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
ark/: .gitlab-ci.yml
doc/: conf.py  index.rst
docs/: .gitignore  conf.py  index.rst
docs/api/: index.rst  modules.rst  timew.duration.rst  timew.exceptions.rst  timew.interval.rst  timew.rst  timew.timewarrior.rst
lib/timew/: exceptions.py  timewarrior.py
tests/: duration_test.py  interval_test.py  test_timewarrior.py  timewarrior_test.py
timew/: __init__.py  duration.py  exceptions.py  interval.py  interval.py_unused  test.py  timewarrior.py  warrior.py_unused
