[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "timew"
version = "0.0.22"
description = "Python bindings for your timewarrior database"
authors = [ "Tjaart van der Walt <tjaart@tjaart.org>",]
readme = "README.rst"
repository = "https://gitlab.com/tjaart/python-timew"
keywords = [ "timewarrior",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
jedi = "^0.13.3"
pytest = "^4.3"
pytest-cov = "^2.6"
tox = "^3.7"
toml = "^0.10.0"
semver = "^2.8"
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.3"
sphinxcontrib-apidoc = "^0.3.0"
isort = "^4.3"

[tool.poetry.dev-dependencies.black]
version = "^18.3-alpha.0"
allows-prereleases = true
