[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "timew"
version = "0.1.0"
requires-python = ">= 3.9"
dynamic = ["dependencies", "optional-dependencies",]
description = "Python bindings for your timewarrior database"
authors = [{name = "Tjaart van der Walt", email = "tjaart@tjaart.org"},]
readme = "README.rst"
keywords = [ "timewarrior",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Issues = "https://github.com/smemsh/python-timew/issues/"
Homepage = "https://github.com/smemsh/python-timew/"
Repository = "https://github.com/smemsh/python-timew/"
Documentation = "https://github.com/smemsh/python-timew/docs/api/modules.rst"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages]
find = {namespaces = false}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=timew -v -s"
