[metadata]
name = timew
author = Tjaart van der Walt
author-email = tjaart@tjaart.org
summary = Python bindings for your timewarrior database
description-file = README.md
# description-content-type = text/x-rst; charset=UTF-8
home-page = https://gitlab.com/tjaart/python-timew
project_urls =
    Bug Tracker = https://gitlab.com/tjaart/python-timew/issues
    Documentation = https://gitlab.com/tjaart/python-timew
    Source Code = https://gitlab.com/tjaart/python-timew
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    timewarrior
